<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventsRelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView
     android:id="@+id/eventsToDS"
     style="@style/GlassText.XSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
     android:text="@string/events_to_DS" />
    
    <TextView
        android:id="@+id/eventsToVitals"
        style="@style/GlassText.XSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/events_to_vitals" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_alignBottom="@+id/eventsToDS"
        android:layout_alignParentLeft="true"
        android:background="@color/white" />

    <TextView
        android:id="@+id/events"
        style="@style/GlassText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/events_screen_title" />
    
	<TableLayout
	    android:id="@+id/eventsTableLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@+id/separator"
	    android:stretchColumns="2,3,4,5">
	    
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:baselineAligned="true" >
	
	        <TextView
	            android:id="@+id/eventsRank"
	            style="@style/GlassText.XSmall"
	            android:text="@string/Rank" />
	
	        <TextView
	            android:id="@+id/eventsTime"
	            style="@style/GlassText.Small"
	            android:text="@string/Time" />
	
	        <TextView
	            android:id="@+id/eventsEvent"
	            style="@style/GlassText.Small"
	            android:text="@string/Event" />
	
	        <TextView
	            android:id="@+id/eventsAttribute"
	            style="@style/GlassText.Small"
	            android:text="@string/Att" />

	        <TextView
	            android:id="@+id/eventsState"
	            style="@style/GlassText.Small"
	            android:text="@string/State" />

	    </TableRow>
	</TableLayout>
</RelativeLayout>