<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TableRow
        style="@style/GlassText.Row" >
        <TextView
        	style="@style/GlassText.Large"
            android:text="@string/options" />
    </TableRow>
    
    <View
    	android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/white"/>
 
    <TableRow
        style="@style/GlassText.Row" >

        <TextView
            style="@style/GlassText.Row.Right"
            android:text="@string/screen_timeout" />

        <TextView
            android:id="@+id/timeoutOption"
            style="@style/GlassText.Row.Left"
            android:text="@string/empty" />

    </TableRow>
 
    <TableRow
        style="@style/GlassText.Row" >

        <TextView
            style="@style/GlassText.Row.Right"
            android:text="@string/num_recent_patients" />

        <TextView
            android:id="@+id/recentPatientOption"
            style="@style/GlassText.Row.Left"
            android:text="@string/empty" />

    </TableRow>
    
    <TableRow
        style="@style/GlassText.Row" >

        <TextView
            style="@style/GlassText.Row.Right"
            android:text="@string/head_gesture"/>

        <TextView
            android:id="@+id/headGesture"
            style="@style/GlassText.Row.Left"
            android:text="@string/empty" />

    </TableRow>
    
    <TableRow
        style="@style/GlassText.Row" >

        <TextView
            style="@style/GlassText.Row.Right"
            android:text=""/> />

    </TableRow>
    
    <TableRow
        style="@style/GlassText.Row" >

        <TextView
            style="@style/GlassText.Row.Right"
            android:text=""/> />

    </TableRow>
    
    <TableRow
        style="@style/GlassText.Row" >

        <TextView
            style="@style/GlassText.Row"
            android:text="Tap to change settings"/> />

    </TableRow>

</TableLayout>