<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<!--     <TextView android:id="@+id/edit_message" -->
<!--         android:layout_weight="1" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="0dp" -->
<!--         android:hint="@string/welcome" /> -->
    
    <TextView
        style="@style/Heading"
	    android:text="@string/welcome" />
    
    <View
    	android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/white"/>
    
    <TextView
        style="@style/Heading.Sub"
	    android:text="@string/tap_scanner" />
    
    <TextView
        style="@style/Heading.Sub"
	    android:text="@string/swipe_recent_patients" />

</LinearLayout>
