<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/notification_title"
        	style="@style/Heading"
            android:text="@string/notification_title" />
    
	    <View
	    	android:layout_width="match_parent"
	        android:layout_height="2dip"
	        android:background="@color/white"/>
        
        <TextView
            android:id="@+id/notification_message"
        	style="@style/Heading.Sub"
            android:text="@string/empty" />
    
	    <View
	    	android:layout_width="match_parent"
	        android:layout_height="2dip"
	        android:background="@color/white"/>
        
        <TextView
            android:id="@+id/notification_dismiss"
        	style="@style/Heading.Sub"
            android:text="@string/notification_dismiss" />
        
    </LinearLayout>
</ScrollView>